--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Seja bem vindo(a)</h1>
+    <script>
+        document.write('Testando 1,2,3, ...')
+    </script>
+
+    <script src="script.js"></script>
 </body>
 </html>
